# mission-control

./: .gitignore  pyproject.toml  run.sh  test-gdrive.py  test.py  test_gdrive.py
database/: .env  clean.sh  docker-compose.yml  start.sh
database/backup-service/: Dockerfile  backup.sh  crontab  entrypoint.sh
database/db-service/: Dockerfile  initialize-database.sql
python/: pyproject.toml  run.sh  test.py
python/mission_control/: __init__.py  gdrive.py  main.py  model.py  sql.py
src/: __init__.py  main.py  util.py
src/mission_control/: gdrive.py  logger.py  main.py  util.py
