[tool.poetry]
name = "mission-control"
version = "0.1.0"
description = "Data management for Lewis Lab at the University of Michigan."
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.12.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
